# metecho

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  TODO.md  buildme.sh  main.py  requirements  setup.cfg  setup.py
docs/: Makefile
docs/source/: README.md  api.rst  auto_api.rst  conf.py  index.rst
docs/source/examples/: convert_MUI_to_h5__no_gallery.py  data_store_example.py  debug_eiscat_vhf.py  event_search_raw_data.py  (+10 more)
examples/: README.rst  convert_MUI_to_h5.py  convert_MUI_to_h5__no_gallery.py  data_store_example.py  event_search_raw_data.py  load_MU_data.py  run_matched_filter.py  tree_listing.py
metecho/: __init__.py
metecho/cli/: main.py
metecho/data/: MU.py  __init__.py  converters.py  data_store.py  drf.py  mu.py  raw_data.py
metecho/event_search/: base.py  conf.py  config.py  event_search.py  filters.py  search_objects.py
metecho/events/: conf.py  event.py  event_search.py  event_select.py  filters.py  search_objects.py
metecho/generalized_matched_filter/: barker_xcorr.py  barker_xcorr_decode_single  barker_xcorr_decode_single.c  barker_xcorr_echo_search  barker_xcorr_echo_search.c  barker_xcorr_echo_search.h  signal_model.py  testlib.c  xcorr.py  xcorr_echo_search.c  xcorr_echo_search.h
metecho/noise/: calc_noise.py
metecho/plot/: __init__.py  general.py  generalized_matched_filter.py  raw_data.py
metecho/tools/: __init__.py  mpi_decorators.py  profiling.py
src/clibmet/: Makefile
src/libxcorr/: Makefile
src/metecho/: __init__.py  frames.py
src/xcorr/: Makefile  xcorr.c  xcorr.h
tests/: test_barker_xcorr.py  test_search.py  test_xcorr.py
(+72 files in other folders)
