[metadata]
name = metecho
version = 0.0.3
description = Radar meteor analysis in Python and C
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen, Kenneth Kullbrandt
author_email = daniel.kastinen@irf.se
license = MIT
license_files = LICENSE
readme = README.md
url = https://github.com/danielk333/metecho
classifiers = 
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta


[options]
python_requires = >=3.7
install_requires =
    h5py >= 3.4.0
    matplotlib >= 2.2.2
    numpy >= 1.14.3
    scipy >= 1.1.0
    tabulate >= 0.8.7
    tqdm >= 4.46.0


[options.entry_points]
console_scripts = 
    metecho = metecho.cli:main


[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    nbsphinx >= 0.8.8
    ipykernel >= 6.9.1
    radon >= 5.1.0
    m2r2 >= 0.3.2
    setuptools >= 57.4.0
    numpydoc >= 1.2
mpi =
    mpi4py >= 3.1.1
extra = 
    pandas >= 1.4.0
    astropy >= 5.0
all = 
    mpi4py >= 3.1.1
    pandas >= 1.4.0
    astropy >= 5.0


[flake8]
ignore = D203,E251,E126,E226,W291
max-line-length = 110
exclude = src/metecho/__pycache__,src/metecho/__init__.py,src/metecho/**/__init__.py